@@ -19,6 +19,10 @@ void fb_ConsolePrintBufferEx( const void *buffer, size_t len, int mask )
 		return;
 	}
 
+	BG_LOCK( );
+	fb_hRecheckConsoleSize( );
+	BG_UNLOCK( );
+
 	/* ToDo: handle scrolling for internal characters/attributes buffer? */
 	avail = (__fb_con.w * __fb_con.h) - (((__fb_con.cur_y - 1) * __fb_con.w) + __fb_con.cur_x - 1);
 	avail_len = len;
