@@ -5,6 +5,7 @@ Version 0.90.1:
 [added]
 
 [fixed]
+- Potential internal errors in Unix rtlib during SIGWINCH signal handling, due to calls to non-async-signal-safe functions
 
 
 Version 0.90.0 (former 0.25.0):
